--- a/talk/style.css
+++ b/talk/style.css
@@ -1,10 +1,7 @@
 body {
   font-family: OrkneyRegular;
-  font-size: 200%;
-}
-
-div#tooling p {
   text-align: center;
+  font-size: 200%;
 }
 
 p {
@@ -15,18 +12,17 @@ p {
 }
 
 h1, h2, h3, h4 {
-  text-align: center;
   font-weight: normal;
   margin-bottom: 0.3em;
   margin-top: 0.3em;
 }
 
 ul, ol {
+  text-align: left;
   list-style-position: inside;
 }
 
 li {
-  text-align: left;
   font-size: 125%;
   font-weight: normal;
   margin-bottom: 0.3em;
@@ -36,10 +32,18 @@ li {
   list-style-type: circle;
 }
 
+/* left-align code blocks */
+div .code {
+  text-align: left;
+}
+
+.strike {
+  text-decoration: line-through;
+}
 
 @font-face {
   font-family: OrkneyRegular;
-  src: url('./fonts/orkney/Orkney Regular.woff2') format('woff2');
+  src: url('./downloads/fonts/orkney/Orkney Regular.woff2') format('woff2');
 }
 
 .step {
