--- a/working-example/app2/src/App.css
+++ b/working-example/app2/src/App.css
@@ -22,6 +22,11 @@
   font-size: large;
 }
 
+ol, ul {
+  display: inline-block;
+  text-align: left;
+}
+
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
